# Rafi

./: README.md  l  readme.md
CAD/: 10way FuseBox.SLDPRT  123SmartRelay-DESKTOP-64JOPE0.SLDASM  123SmartRelay.SLDASM  Base pack 24V.SLDDRW  Base pack 24V.SLDPRT  Base pack 24V.STL  Bloque-Fusibles.SLDPRT  DC-DC Convertor 2.SLDASM  DC-DC Convertor.SLDASM  DC-DC Convertor.stp  DCDC.SLDPRT  DCDC.STEP  Ensamblaje Inversor y cargador.SLDASM  Ensamblaje cuadro rpi.SLDASM  Ensamblaje cuadro rpi2 -DESKTOP-64JOPE0.SLDASM  Ensamblaje cuadro rpi2 .SLDASM  Ensamblaje1.SLDASM  Estructura.SLDASM  FRANKA_including_FE_hand.STEP.SLDASM  PCB_relays.SLDPRT  Panel Frontal Medio.SLDPRT  Panel Lateral Derecho Trasero.SLDPRT  Panel Lateral baterías.SLDPRT  Panel Lateral.SLDPRT  Pestaña Panel v2.3mf  Pestaña Panel v2.SLDPRT  Pestaña Panel v2.STL  Pestaña Panel.3mf  Pestaña Panel.SLDPRT  Pestaña Panel.STL  Petsaña Panel.SLDPRT  Pieza bisagra cerrada.SLDPRT  Pieza bisagra cerrada.STL  Pieza bisagra.3mf  Pieza bisagra.SLDPRT  Pieza bisagra.STL  Pieza3.SLDPRT  Pieza3.STL  Plataforma.SLDPRT  Relay200A.SLDPRT  (+131 more)
CAD/7 inch HDMI display/: 0805-C.SLDPRT  0805-R.SLDPRT  629105150521 (rev1).SLDPRT  685119134923_Housing.sldprt  685119134923_Pin1.sldprt  685119134923_Pin2.sldprt  685119134923_Shielding.sldprt  (+27 more)
Programas de Paco Carbonero/joy_ros/: CMakeLists.txt  package.xml
Programas de Paco Carbonero/joy_ros/src/: teleop_twist_joy.cpp
joystick_pkg/: CMakeLists.txt  package.xml
ros2_roboclaw_driver_delantero/: CMakeLists.txt  package.xml
ros2_roboclaw_driver_trasero/: CMakeLists.txt  package.xml
(+61 files in other folders)
